# furnace

./: .furnacerc.toml  .furnacerc.toml.example  .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  uninstall.sh
demos/: README.md  all_styles.tape  compact.tape  composability.tape  grid.tape  help.tape  plain.tape  record_all.sh  tree.tape
src/: ai_linting.rs  config.rs  engine.rs  graph.rs  lib.rs  linting.rs  main.rs  output.rs  types.rs  visitor.rs
tests/: integration_test.rs  output_test.rs
