[package]
name = "furnace"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Rust project tree + variable color tagging tool"
license = "MIT"

[dependencies]
walkdir = "2.5.0"
syn = { version = "2.0.110", features = ["full", "visit"] }
colored = "2.2.0"
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0.42"
toml = "0.8"
rayon = "1.10"
cargo_toml = "0.20"
sha2 = "0.10"
bincode = "1.3"
hex = "0.4"

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.async-openai]
version = "0.23"
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[features]
default = []
ai = ["tokio", "async-openai", "reqwest"]
